tests/transpiler/x/swift/group_by_sort.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/026/main.swift:22:27: error: cannot convert value of type '(Int) -> Int' to expected argument type '(Int, Any) throws -> Int'
20 |     _res.append(x["val"]!)
21 | }
22 | return _res })().reduce(0,+)) as! Double)
   |                           `- error: cannot convert value of type '(Int) -> Int' to expected argument type '(Int, Any) throws -> Int'
23 | let g = b
24 | let _kb = -((({ var _res: [Any] = []

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/026/main.swift:22:31: warning: cast from 'Int' to unrelated type 'Double' always fails
20 |     _res.append(x["val"]!)
21 | }
22 | return _res })().reduce(0,+)) as! Double)
   |                               `- warning: cast from 'Int' to unrelated type 'Double' always fails
23 | let g = b
24 | let _kb = -((({ var _res: [Any] = []
